--- a/GitHub_Example.ipynb
+++ b/GitHub_Example.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcqlIhT3Pxu9lZFDcRWqrd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,62 +33,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aTqbtzaFdTWo",
-        "outputId": "a76ace50-a6af-4b6e-9c6c-846b25fb129a"
+        "outputId": "e65bd107-59d5-467b-b292-b66b8e43d003"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "usage: git [--version] [--help] [-C <path>] [-c <name>=<value>]\n",
-            "           [--exec-path[=<path>]] [--html-path] [--man-path] [--info-path]\n",
-            "           [-p | --paginate | -P | --no-pager] [--no-replace-objects] [--bare]\n",
-            "           [--git-dir=<path>] [--work-tree=<path>] [--namespace=<name>]\n",
-            "           [--super-prefix=<path>] [--config-env=<name>=<envvar>]\n",
-            "           <command> [<args>]\n",
-            "\n",
-            "These are common Git commands used in various situations:\n",
-            "\n",
-            "start a working area (see also: git help tutorial)\n",
-            "   clone     Clone a repository into a new directory\n",
-            "   init      Create an empty Git repository or reinitialize an existing one\n",
-            "\n",
-            "work on the current change (see also: git help everyday)\n",
-            "   add       Add file contents to the index\n",
-            "   mv        Move or rename a file, a directory, or a symlink\n",
-            "   restore   Restore working tree files\n",
-            "   rm        Remove files from the working tree and from the index\n",
-            "\n",
-            "examine the history and state (see also: git help revisions)\n",
-            "   bisect    Use binary search to find the commit that introduced a bug\n",
-            "   diff      Show changes between commits, commit and working tree, etc\n",
-            "   grep      Print lines matching a pattern\n",
-            "   log       Show commit logs\n",
-            "   show      Show various types of objects\n",
-            "   status    Show the working tree status\n",
-            "\n",
-            "grow, mark and tweak your common history\n",
-            "   branch    List, create, or delete branches\n",
-            "   commit    Record changes to the repository\n",
-            "   merge     Join two or more development histories together\n",
-            "   rebase    Reapply commits on top of another base tip\n",
-            "   reset     Reset current HEAD to the specified state\n",
-            "   switch    Switch branches\n",
-            "   tag       Create, list, delete or verify a tag object signed with GPG\n",
-            "\n",
-            "collaborate (see also: git help workflows)\n",
-            "   fetch     Download objects and refs from another repository\n",
-            "   pull      Fetch from and integrate with another repository or a local branch\n",
-            "   push      Update remote refs along with associated objects\n",
-            "\n",
-            "'git help -a' and 'git help -g' list available subcommands and some\n",
-            "concept guides. See 'git help <command>' or 'git help <concept>'\n",
-            "to read about a specific subcommand or concept.\n",
-            "See 'git help git' for an overview of the system.\n"
+            "I created pushed this file to GitHub using Google Colab\n"
           ]
         }
       ],
-      "source": []
+      "source": [
+        "print(\"I created pushed this file to GitHub using Google Colab\")"
+      ]
     }
   ]
 }
